Fix element spacing in footer for mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,6 +43,7 @@ a {
   position: relative;
   font-size: 24px;
   line-height: 1.4;
+
   p {
     margin-bottom: 20px;
   }
@@ -305,9 +306,13 @@ nav {
     outline: 0;
   }
 
+  #main {
+    padding-bottom: 30px;
+  }
+
   .content {
     section {
-      padding: 30px 15px;
+      padding: 30px 15px 0;
     }
   }
 
